--- a/style.css
+++ b/style.css
@@ -42,3 +42,11 @@ h1{
     font-family: 'Luckiest Guy', cursive;
     color: rgb(1, 66, 1);
 }
+.otherwords{
+    font-family: 'Dosis', sans-serif;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+.imagee{
+
+}
