--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ header, footer {
     color: #fff;
     padding: 10px 0;
     text-align: center;
+    font-family: 'Luckiest Guy', cursive;
+    font-weight: 100;
 }
 
 footer {
@@ -53,4 +55,8 @@ h1{
 
 .rein {
     margin-bottom:50px;
+}
+.plswork{
+    font-family: 'Clicker Script', cursive;
+    font-size: 20px;
 }
